# mergebot

./: .clang-format  .clang-format-ignore  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  docker-compose.yml
app/: CMakeLists.txt  app.cpp  mergebot.cpp  mergebot.h
app/clp/: command_line_parser.h
apps/: mergebot.cpp  mergebot.h
apps/commandlienparser/: cl_parser.h
assets/: build.sh  mergebot.run  mergebot.shutdown  package.sh  prepare-repos.sh  setup.sh
cmake/: FindLibGit2.cmake  FindTreeSitter.cmake  checklinter.cmake  conaninstall.cmake  googletest.cmake
docker/algorithm/: Dockerfile  docker-entrypoint.sh
docker/backend/: Dockerfile  docker-entrypoint.sh
docker/frontend/: Dockerfile  nginx.conf
docs/: 240611 解决方案说明.md  README.zh-CN.md  api-mergebot-sa.md  api-mergebot-sa_v1.1.md  api-mergebot-sa_v1.2.md  api-mergebot-sa_v1.3.md  api-mergebot-sa_zh-CN.md  build-guide.md  lexical conventions of C++.md
docs/dep/: dependencies.dot
eva/: .gitignore  Pipfile  README.md  aggregator.py  config.py  correlation-analysis.py  env.py  evaluate.py  evaluate_test.py  evaluator.py  gitservice.py  log.py  mongo.py  octok.py  setup.py  sumup.ipynb  utils.py
eva/command/: miner.py  model.py  stat.py
eva/judger/: judger.py
eva/serializer/: mongo.py
eva/tests/: git_service_test.py  log_test.py  stat_test.py
eva/utils/: __init__.py  common.py  fileop.py  git.py  gitservice.py
husky/: exec.go  exec_test.go  go.mod  husky_test.go  main.go
include/base/: Channel.h
include/mb/: c.h  export.h
include/mergebot/: c.h  globals.h  magic_enum_customization.h  utility.h
include/mergebot/controller/: app_exception.h  config_controller.h  exception_handler_aspect.h  project_controller.h  resolve_controller.h  response_tuner_mw.h
include/mergebot/core/: HandlerChain.h  ResolutionManager.h  magic_enum_customization.h  sa_utility.h
include/mergebot/core/handler/: ASTBasedHandler.h  LLVMBasedHandler.h  SAHandler.h  StyleBasedHandler.h  TextBasedHandler.h
include/mergebot/core/model/: ConflictBlock.h  ConflictFile.h  ConflictMark.h  MergeScenario.h  SemanticEdge.h  SemanticNode.h  Side.h  SimplifiedDiffDelta.h
include/mergebot/core/semantic/: GraphBuilder.h  GraphExporter.h  GraphMatcher.h  GraphMerger.h  PrettyPrinter.h  RefactorFollower.h  SemanticFollower.h  SourceCollectorV2.h  SourceFileCollector.h  graph_export.h  pretty_printer.h
include/mergebot/lsp/: client.h  communicator.h  protocol.h  transport.h  uri.h
include/mergebot/parser/: children.h  field.h  node.h  parser.h  point.h  range.h  symbol.h  tree.h  tree_cursor.h  utils.h
include/mergebot/parser/languages/: cpp.h
include/mergebot/server/: CrowSubLogger.h  result_vo_utils.h  server_utility.h
include/mergebot/server/vo/: ResolutionResultVO.h
include/mergebot/utils/: Hash.h  LinkedList.h  Set.h  String.cpp  String.h  ThreadPool.cpp  ThreadPool.h  fileio.h  fmt_escape.h  format.h  gitservice.h  pathop.h  sha1.h  similarity.h  stringop.h  to_string.h
include/utils/: Hash.h  List.h  Map.h  Set.h  String.cpp  String.h
logs/: mergebot
scripts/: mergebot.run  setup.sh
src/: CMakeLists.txt  consts.cpp  consts.h  globals.cpp  globals.h  magic_enum_customization.h  result_vo_utils.cpp  result_vo_utils.h  server.cpp  utility.cpp  utility.h
src/consts/: ErrorEnum.h
src/controller/: ExceptionHandlerAspect.h  app_exception.h  config_controller.cpp  config_controller.h  exception_handler_aspect.h  project_controller.cpp  project_controller.h  resolve_controller.cpp  resolve_controller.h  response_hacker_mw.h  response_tuner_mw.h
src/core/: HandlerChain.cpp  HandlerChain.h  MergeScenario.cpp  MergeScenario.h  ResolutionManager.cpp  ResolutionManager.h  sa_utility.cpp
src/core/handler/: ASTBasedHandler.cpp  ASTBasedHandler.h  LLVMBasedHandler.cpp  SAHandler.h  StyleBasedHandler.cpp  StyleBasedHandler.h  TextBasedHandler.cpp  TextBasedHandler.h
src/core/model/: ConflictBlock.h  ConflictFile.h  MergeScenario.h  Project.h  ResolutionResultVO.h  SemanticEdge.cpp  SemanticNode.cpp
src/core/model/mapping/: NodeContext.cpp
src/core/semantic/: GraphBuilder.cpp  GraphExporter.cpp  GraphMatcher.cpp  GraphMerger.cpp  PrettyPrinter.cpp  RefactorFollower.cpp  SemanticFollower.cpp  SourceCollectorV2.cpp  SourceFileCollector.cpp  graph_export.cpp  pretty_printer.cpp
src/include/mergebot/: filesystem.h
src/include/mergebot/utils/: Channel.cpp  List.h  Map.h  Set.h  String.cpp  ThreadPool.cpp  ThreadPool.h  copyable.h  fileio.h  format.h  noncopyable.h  to_string.h
src/include/utils/: format.h
src/lsp/: client.cpp  communicator.cpp  uri.cpp
src/parser/: children.cpp  node.cpp  parser.cpp  point.cpp  range.cpp  symbol.cpp  tree.cpp  tree_cursor.cpp  utils.cpp
src/server/: CrowSubLogger.h  result_vo_utils.cpp  result_vo_utils.h  server_utility.cpp  utility.cpp  utility.h
src/utils/: Channel.cpp  String.cpp  ThreadPool.cpp  fileio.cpp  gitservice.cpp  similarity.cpp  stringop.cpp
src/vo/: project_vo.h
tests/: CMakeLists.txt  extract_test.cpp  git_utils_test.cpp  gitservice_test.cpp  lsp_test.cpp  main.cpp  parser_export_test.cpp  parser_test.cpp  sa_details_test.cpp  sa_utility_test.cpp  simi_test.cpp  stringop_test.cpp  utility_test.cpp
tests/mock/: conflict.txt
tools/: stat.sh
tools/dockerfile/mb_iwyu/: Dockerfile  iwyu.sh
tools/sanitization/: gen_compilation_database.py  iwyu.sh  sanitize.sh
ui/conflict-manager/: .gitignore  README.md  audit.sql  conflict.sql  pom.xml
ui/frontend/: .editorconfig  .prettierrc  README.md  cli-plugin-monaco-editor.js  package.json  pnpm-lock.yaml  vue.config.js
ui/frontend/patches/: monaco-editor@0.44.0.patch
ui/frontend/src/: App.vue  index.css  main.js
ui/frontend/src/api/: audit.js  classifier.js  config.js  edit_script_resolver.js  files.js  git.js  refactoring.js  sa.js
ui/frontend/src/components/: DiffResolutionEditor.vue  DraggableContainer.vue  DraggableItem.vue  FileTree.vue  MergeScenarioEditor.vue  (+3 more)
watchdog/: go.mod  go.sum  main.go  watchdog_test.go
(+126 files in other folders)
